--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>AnimeSub</title>
+		<title>UNIME</title>
 		<meta
 			name="google-site-verification"
 			content="KJpCRdx8CIw7J4NDSNJimGxVhl6VG1OJA_UStkzDQQ4"
@@ -14,14 +14,14 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web xem phim Anime miễn phí." />
 		<meta name="mobile-web-app-capable" content="yes" />
-		<meta name="application-name" content="AnimeSub" />
-		<meta name="apple-mobile-web-app-title" content="AnimeSub" />
+		<meta name="application-name" content="Unime" />
+		<meta name="apple-mobile-web-app-title" content="Unime" />
 		<meta name="theme-color" content="#fb5331" />
 		<meta property="fb:app_id" content="319630456776049" />
-		<meta property="og:title" content="AnimeSub" />
+		<meta property="og:title" content="UNIME" />
 		<meta property="og:description" content="Web xem phim Anime miễn phí." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://animesub.org" />
+		<meta property="og:url" content="https://unime.vercel.app/" />
 		<meta property="og:image" content="https://i.imgur.com/pHrKSHE.png" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="1800" />
